bk_ida/gccida/c0/record_dead_and_set_regs_1
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/record_dead_and_set_regs_1/src/combine.c:11751:33: error: use of undeclared identifier 'machine_mode'
v4 = gen_lowpart_for_combine( ( machine_mode)BYTE2( *( _DWORD *)desta), *( rtx *)&setter[1]); 
                                ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/record_dead_and_set_regs_1/src/combine.c:11762:28: error: use of undeclared identifier 'machine_mode'
&& !push_operand( desta, ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)desta)) ) 
                           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/record_dead_and_set_regs_1/src/combine.c:11762:43: error: expected expression
&& !push_operand( desta, ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)desta)) ) 
                                          ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/record_dead_and_set_regs_1/src/obj/combine.o] Error 1
